[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panen-tweet"
version = "1.0.4"
description = "Powerful Twitter/X scraping tool dengan Selenium"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Ramadhani", email = "rhamadhanigb19@gmail.com"}
]
keywords = ["twitter", "scraping", "selenium", "web-scraping", "x-scraper","panen-tweet","x"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Dhaniaaa/panen-tweet"
"Bug Reports" = "https://github.com/Dhaniaaa/panen-tweet/issues"
Source = "https://github.com/Dhaniaaa/panen-tweet"

[project.scripts]
panen-tweet = "panen_tweet.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["panen_tweet*"]
exclude = ["tests*"]
